...
          tabBarIcon: ({ focused }) => <ExploreIcon focused={focused} />,
        }}
      />
      <Tabs.Screen
        name="mood"
        options={{
          title: 'Mood',
          tabBarButtonTestID: T.tab.mood,
          tabBarAccessibilityLabel: 'Mood tab',
          tabBarIcon: ({ focused }) => <MoodIcon focused={focused} />,
        }}
      />
      <Tabs.Screen
...
